Fix Experience tooltip overlap bug
I hate that I have to keep using z-index to fix this, but it is what it is.

--- a/folio-app/src/components/home/Experience.module.css
+++ b/folio-app/src/components/home/Experience.module.css
@@ -37,6 +37,11 @@
   flex: 1;
 }
 
+.tooltipOverlap {
+  position: relative;
+  z-index: 1;
+}
+
 .titleBar {
   display: flex;
   flex-direction: row;
